feat: 更新主页链接和服务器名称
- 修改 manifest.json 中的主页链接为 GitHub 地址
- 更新 server/package.json 中的名称使其符合规范

--- a/manifest.json
+++ b/manifest.json
@@ -7,5 +7,5 @@
     "css": "style.css",
     "author": "ZMou",
     "version": "1.0.0",
-    "homePage": "https://zmoutech.cn"
+    "homePage": "https://github.com/qiqi20020612/SillyTavern-Telegram-Connector"
 }
